<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:background="@drawable/rounded_top_bar"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <LinearLayout
        style="@style/TabbarLayout"
        android:id="@+id/tabButtonBuy">

        <TextView
            style="@style/TabbarTextView"
            android:id="@+id/tabTextViewBuy"
            android:text="@string/tabAddBuy" />
    </LinearLayout>

    <LinearLayout
        style="@style/TabbarLine"/>

    <LinearLayout
        style="@style/TabbarLayout"
        android:id="@+id/tabButtonSell">

        <TextView
            style="@style/TabbarTextView"
            android:id="@+id/tabTextViewSell"
            android:text="@string/tabAddSell"/>
    </LinearLayout>

    <LinearLayout
        style="@style/TabbarLine"/>

    <LinearLayout
        style="@style/TabbarLayout"
        android:id="@+id/tabButtonChange">

        <TextView
            style="@style/TabbarTextView"
            android:id="@+id/tabTextViewChange"
            android:text="@string/tabAddChange"/>
    </LinearLayout>

</LinearLayout>