<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.AddTransactionTabBuy">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollViewBuy"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragmentBackgroundBuy"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    style="@style/AddTransactionItemLinearLayout">

                    <TextView
                        style="@style/AddTransactionItemDescriptionTextView"
                        android:id="@+id/descriptionQuantityBuy"
                        android:text="@string/firstRowBuy"/>

                    <EditText
                        android:id="@+id/editTextQuantityBuy"
                        style="@style/AddTransactionItemEditText"
                        tools:ignore="SpeakableTextPresentCheck"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <LinearLayout
                    style="@style/AddTransactionUnderline"/>

                <LinearLayout
                    style="@style/AddTransactionItemLinearLayout">

                    <TextView
                        style="@style/AddTransactionItemDescriptionTextView"
                        android:id="@+id/descriptionPriceBuy"
                        android:text="@string/secondRowBuy"/>

                    <EditText
                        android:id="@+id/editTextPriceBuy"
                        style="@style/AddTransactionItemEditText"
                        tools:ignore="SpeakableTextPresentCheck"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <LinearLayout
                    style="@style/AddTransactionUnderline"/>

                <LinearLayout
                    style="@style/AddTransactionItemLinearLayout">

                    <TextView
                        style="@style/AddTransactionItemDescriptionTextView"
                        android:id="@+id/descriptionCurrencyBuy"
                        android:text="@string/thirdRowBuy"/>

                    <Spinner
                        android:id="@+id/spinnerCurrencyBuy"
                        style="@style/AddTransactionItemSpinner"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>

                <LinearLayout
                    style="@style/AddTransactionUnderline"/>

                <LinearLayout
                    style="@style/AddTransactionItemLinearLayout">

                    <TextView
                        style="@style/AddTransactionItemDescriptionTextView"
                        android:id="@+id/descriptionFeeBuy"
                        android:text="@string/fourthRowBuy"/>

                    <EditText
                        android:id="@+id/editTextFeeBuy"
                        style="@style/AddTransactionItemEditText"
                        tools:ignore="SpeakableTextPresentCheck"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <LinearLayout
                    style="@style/AddTransactionUnderline"/>

                <LinearLayout
                    style="@style/AddTransactionItemLinearLayout">

                    <TextView
                        style="@style/AddTransactionItemDescriptionTextView"
                        android:id="@+id/descriptionDateBuy"
                        android:text="@string/fifthRowBuy"/>

                    <TextView
                        style="@style/AddTransactionItemTextView"
                        android:id="@+id/textViewDateBuy"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/AddTransactionUnderline"/>

                <LinearLayout
                    style="@style/AddTransactionItemLinearLayout">

                    <TextView
                        style="@style/AddTransactionItemDescriptionTextView"
                        android:id="@+id/descriptionTimeBuy"
                        android:text="@string/sixthRowBuy"/>

                    <TextView
                        style="@style/AddTransactionItemTextView"
                        android:id="@+id/textViewTimeBuy"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/AddTransactionUnderline"/>

                <LinearLayout
                    style="@style/AddTransactionItemLinearLayoutForImageView">

                    <TextView
                        style="@style/AddTransactionItemDescriptionTextView"
                        android:id="@+id/descriptionPhotoBuy"
                        android:text="@string/newPhoto" />

                    <LinearLayout
                        style="@style/AddTransactionEntryFields">
                        <ImageView
                            style="@style/AddTransactionImageViewPhotoSelected"
                            android:id="@+id/imvButtonShowPhotoBuy"
                            android:contentDescription="@string/photos" />

                        <ImageView
                            style="@style/AddTransactionImageViewPhoto"
                            android:id="@+id/imgButtonAddPhotoBuy"
                            android:contentDescription="@string/newPhoto"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_weight="4"
                android:minHeight="100dp">

                <Button
                    android:id="@+id/buttonSaveBuy"
                    style="@style/AddTransactionButton"
                    android:layout_marginBottom="24dp"
                    android:text="@string/btnSave"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>